Fix bad wrap
This is causing iPhone layout to be totally broken. Fuck.

--- a/content/stylesheets/main.sass
+++ b/content/stylesheets/main.sass
@@ -429,8 +429,7 @@ footer
 // little before the width we'd normally reserve for smartphones and such, so
 // put them inline a little ahead of everything else. This is largely to
 // accommodate the iPad's display.
-@media handheld, only screen and (max-width: 1000px), only screen and
-(max-device-width: 1000px)
+@media handheld, only screen and (max-width: 1000px), only screen and (max-device-width: 1000px)
   article
     figure
       img
